# lyn

./: .gitignore  CMakeLists.txt  Makefile  README.md  address.hh  arm_relocator.cpp  arm_relocator.h  byte_utils.hh  config.cmake  config.hh  config.in  event_helpers.cc  event_helpers.hh  event_object.cpp  event_object.h  layout.cc  layout.hh  lynelf.cc  lynelf.hh  main.cc  main.cpp  output.cc  output.hh  relocation.cc  relocation.hh  section_data.cpp  section_data.h  symtab.cc  symtab.hh
core/: arm_relocator.cc  arm_relocator.cpp  arm_relocator.h  binary_file.cpp  binary_file.h  data_file.cpp  data_file.h  event_code.cpp  event_code.h  event_object.cc  event_object.cpp  event_object.h  event_section.cpp  event_section.h  section_data.cpp  section_data.h  util.cpp  util.h
ea/: event_code.cpp  event_code.h  event_section.cpp  event_section.h
elf/: elf.cpp  elf.h  elf_file.cpp  elf_file.h  raw_elf.h
natelf/: arm32.cc  arm32.hh  natelf.cc  natelf.hh
tests/patches/: Makefile  abs_sym.s  patch.c
tests/unit/: test_relocation.cc
